--- a/index.html
+++ b/index.html
@@ -18,15 +18,17 @@
             }
         </style>
         <h1 style="text-align: center;">Pedra, papel ou tesoura!</h1>
+        <h2 class="vencedor"></h2>
         <hr>
         <div class="align">
+            
             <div class="player-options">
-                <div><img opt="peda" src="rock.png" /></div>
+                <div><img opt="pedra" src="rock.png" /></div>
                 <div><img opt="papel" src="paper.png" /></div>
                 <div><img opt="tesoura" src="scisor.png" /></div>
             </div>
             <div class="enemy-options">
-                <div><img opt="peda" src="rock.png" /></div>
+                <div><img opt="pedra" src="rock.png" /></div>
                 <div><img opt="papel" src="paper.png" /></div>
                 <div><img opt="tesoura" src="scisor.png" /></div>
             </div>
